Mon Apr  1 11:56:55 2002  Steve Totten  <totten_s@ociweb.com>

        * ace/Process.h:
        * ace/Process.cpp:

        Applied change from Rich Seibel <seibel_r@ociweb.com> to add a
        reset for the command_line_calculated_ flag (three places) and
        rewrote the description of command_line_buf().

Mon Apr  1 12:38:44 2002  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_Acceptor.h: Corrected @arg to be @a for Doxygen.

Sun Mar 31 22:44:00 2002  Si Mong Park  <spark@ociweb.com>

        * apps/FaCE/FaCE_OS.h:
        * apps/FaCE/FaCE.cpp:
        * apps/FaCE/Main.cpp:
          Changed 'LPWSTR' to 'ACE_TCHAR*' and 'LPCTSTR' to 'const ACE_TCHAR*'.
          Also removed fuzz no-checking header to enable fuzz again.

Sun Mar 31 22:08:00 2002  Si Mong Park  <spark@ociweb.com>

        * ChangeLog:
          Fixed incorrect path for FaCE related files on prior change log items.

Sat Mar 30 08:58:57 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Asynch_Acceptor.cpp: (handle_accept): Removed a stray ACE_DEBUG() call.
	  Thanks to Edan Ayal <edanayal@yahoo.com> for reporting this.

Sun Mar 31 01:18:00 2002  Si Mong Park  <spark@ociweb.com>

        * apps/FaCE/FaCE_OS.h:
        * apps/FaCE/FaCE.cpp:
        * apps/FaCE/Main.cpp:
          Added "// FUZZ: disable check_for_tchar" as the code is only and
          specifically for the WinCE.  Thanks to Nanbor Wang for help.

        * apps/CE_ARGV.H:
        * apps/CE_ARGV.CPP:
          Minor lower/upper case change in the include statement.

Sat Mar 30 22:19:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS.h:
          Removed FaCE_MAIN definition originally added during WinCE port
          and moved to FaCE_OS.h in the FaCE package since it is FaCE
          specific macro.

        * apps/FaCE/Face_OS.h:
          Contains FaCE_MAIN macro definition to set entry point on WinCE.

        * apps/FaCE/ReadMe.txt:
          Updated installation part for FacE_OS.h.
