@@ -1,3 +1,8 @@
+Mon Apr  1 16:35:29 2002  Steve Huston  <shuston@riverace.com>
+
+        * ace/Containers_T.h (ACE_Array): Added performance characteristics
+          and requirements table.
+
 Mon Apr  1 11:56:55 2002  Steve Totten  <totten_s@ociweb.com>
 
         * ace/Process.h:
